// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matrix3D renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(0);
  -ms-transform: matrix3d(0);
  transform: matrix3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(0);
  -ms-transform: matrix3d(0);
  transform: matrix3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(0);
  -ms-transform: matrix3d(0);
  transform: matrix3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(0);
  -ms-transform: matrix3d(0);
  transform: matrix3d(0);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(hasnot);
  -ms-transform: matrix3d(hasnot);
  transform: matrix3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(has);
  -ms-transform: matrix3d(has);
  transform: matrix3d(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(hasnot);
  -ms-transform: matrix3d(hasnot);
  transform: matrix3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(has);
  -ms-transform: matrix3d(has);
  transform: matrix3d(has);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(invalid.path.1);
  -ms-transform: matrix3d(invalid.path.1);
  transform: matrix3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(invalid.path.1);
  -ms-transform: matrix3d(invalid.path.1);
  transform: matrix3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(invalid.path.1);
  -ms-transform: matrix3d(invalid.path.1);
  transform: matrix3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(invalid.path.1);
  -ms-transform: matrix3d(invalid.path.1);
  transform: matrix3d(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(-54881);
  -ms-transform: matrix3d(-54881);
  transform: matrix3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(-54881);
  -ms-transform: matrix3d(-54881);
  transform: matrix3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(-42365);
  -ms-transform: matrix3d(-42365);
  transform: matrix3d(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(-42365);
  -ms-transform: matrix3d(-42365);
  transform: matrix3d(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(July);
    -ms-transform: matrix3d(July);
    transform: matrix3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(September);
    -ms-transform: matrix3d(September);
    transform: matrix3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(July);
    -ms-transform: matrix3d(July);
    transform: matrix3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(September);
    -ms-transform: matrix3d(September);
    transform: matrix3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(May);
    -ms-transform: matrix3d(May);
    transform: matrix3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(June);
    -ms-transform: matrix3d(June);
    transform: matrix3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(April);
    -ms-transform: matrix3d(April);
    transform: matrix3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(May);
    -ms-transform: matrix3d(May);
    transform: matrix3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(June);
    -ms-transform: matrix3d(June);
    transform: matrix3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: matrix3d(April);
    -ms-transform: matrix3d(April);
    transform: matrix3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: matrix3d(July);
    -ms-transform: matrix3d(July);
    transform: matrix3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix3d(September);
    -ms-transform: matrix3d(September);
    transform: matrix3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: matrix3d(July);
    -ms-transform: matrix3d(July);
    transform: matrix3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix3d(September);
    -ms-transform: matrix3d(September);
    transform: matrix3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(November);
    -ms-transform: matrix3d(November);
    transform: matrix3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix3d(August);
    -ms-transform: matrix3d(August);
    transform: matrix3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: matrix3d(January);
    -ms-transform: matrix3d(January);
    transform: matrix3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(December);
    -ms-transform: matrix3d(December);
    transform: matrix3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix3d(April);
    -ms-transform: matrix3d(April);
    transform: matrix3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(May);
    -ms-transform: matrix3d(May);
    transform: matrix3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix3d(June);
    -ms-transform: matrix3d(June);
    transform: matrix3d(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: matrix3d(January);
    -ms-transform: matrix3d(January);
    transform: matrix3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(December);
    -ms-transform: matrix3d(December);
    transform: matrix3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: matrix3d(April);
    -ms-transform: matrix3d(April);
    transform: matrix3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: matrix3d(May);
    -ms-transform: matrix3d(May);
    transform: matrix3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: matrix3d(June);
    -ms-transform: matrix3d(June);
    transform: matrix3d(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(54881);
  -ms-transform: matrix3d(54881);
  transform: matrix3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(54881);
  -ms-transform: matrix3d(54881);
  transform: matrix3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(42365);
  -ms-transform: matrix3d(42365);
  transform: matrix3d(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(42365);
  -ms-transform: matrix3d(42365);
  transform: matrix3d(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(July);
  -ms-transform: matrix3d(July);
  transform: matrix3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(July);
  -ms-transform: matrix3d(July);
  transform: matrix3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(June);
  -ms-transform: matrix3d(June);
  transform: matrix3d(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(June);
  -ms-transform: matrix3d(June);
  transform: matrix3d(June);
}

<div
    className="c0"
  />,
]
`;

exports[`matrix3D renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: matrix3d(DarkSlateBlue);
  -ms-transform: matrix3d(DarkSlateBlue);
  transform: matrix3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(DarkSlateBlue);
  -ms-transform: matrix3d(DarkSlateBlue);
  transform: matrix3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(DarkSlateBlue);
  -ms-transform: matrix3d(DarkSlateBlue);
  transform: matrix3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: matrix3d(DarkSlateBlue);
  -ms-transform: matrix3d(DarkSlateBlue);
  transform: matrix3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
